--- a/assets/style.css
+++ b/assets/style.css
@@ -124,3 +124,11 @@ footer {
   text-align: left;
 }
 
+@font-face {
+  font-family: 'Cornerstone';
+  src: url('assets/fonts/garamond.ttf') format('truetype');
+}
+
+body {
+  font-family: 'garamond', sans-serif;
+}
