--- a/assets/style.css
+++ b/assets/style.css
@@ -125,7 +125,7 @@ footer {
 }
 
 @font-face {
-  font-family: 'Cornerstone';
+  font-family: 'garamond';
   src: url('assets/fonts/garamond.ttf') format('truetype');
 }
 
